Ajout de LogSender pour l'envoi de logs dans un salon Discord