@@ -4,12 +4,16 @@ import fr.umontpellier.iut.discordbot.commands.CommandManager;
 import fr.umontpellier.iut.discordbot.config.ConfigLoader;
 import fr.umontpellier.iut.discordbot.events.EventManager;
 import fr.umontpellier.iut.discordbot.lib.CachedMessage;
+import fr.umontpellier.iut.discordbot.services.LogSender;
 import net.dv8tion.jda.api.JDA;
 import net.dv8tion.jda.api.JDABuilder;
+import net.dv8tion.jda.api.requests.GatewayIntent;
+import net.dv8tion.jda.api.utils.cache.CacheFlag;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
 public class Bot implements Runnable {
@@ -21,6 +25,8 @@ public class Bot implements Runnable {
 	private final EventManager events;
 	private JDA jda;
 
+	private final LogSender logSender;
+
 	@NotNull
 	private final Map<String, CachedMessage> cachedMessages;
 
@@ -29,11 +35,13 @@ public class Bot implements Runnable {
 		commands = new CommandManager(this);
 		events = new EventManager(this);
 		cachedMessages = new HashMap<>();
+		logSender = new LogSender(this);
 	}
 
 	@Override
 	public void run() {
-		this.jda = JDABuilder.createLight(config.get().getToken(), Collections.emptyList())
+		this.jda = JDABuilder.createLight(config.get().getToken(), List.of(GatewayIntent.GUILD_VOICE_STATES, GatewayIntent.GUILD_MESSAGES, GatewayIntent.GUILD_MEMBERS))
+				.enableCache(CacheFlag.VOICE_STATE)
 				.build();
 
 		events.registerEvents();
@@ -61,5 +69,9 @@ public class Bot implements Runnable {
 	@NotNull
 	public Map<String, CachedMessage> getCachedMessages() {
 		return cachedMessages;
+	}
+
+	public LogSender getLogSender() {
+		return logSender;
 	}
 }
